js/js.translator/testData/incremental/invalidationWithPL/moveSuspendFunctionBetweenModules/lib2/l2.0.kt
package sample

// Keep lib2 present before suspend foo() is moved into it.
fun placeholder(): Int = -1
